--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
    #rond{
      background-color:#0b8de3;
      display: block;
+     width: 300px;
      height: 230px;
      margin:auto;
      position: relative;
@@ -187,7 +188,7 @@
           </div>
           <div class="col-md-6">
             <div class="border" id="cbrond">
-            <div class="brond"><span class="rounded-circle w-100" id="rond"></span></div>
+            <div class="brond"><span class="rounded-circle" id="rond"></span></div>
           </div>
           </div>
         </div>
