--- a/index.html
+++ b/index.html
@@ -51,18 +51,7 @@
      height: 230px;
      margin:auto;
      position: relative;
-     left: 50px;
    }
-   .brond{
-     width: 60%;
-     float: right;
-     margin-right: 36px;
-   }
-   #cbrond::after{
-  content: "";
-  clear: both;
-  display: table;
-}
    .dtextinfo{
      border-style: solid;
      border-width: 1px;
@@ -188,7 +177,7 @@
           </div>
           <div class="col-md-6">
             <div class="border" id="cbrond">
-            <div class="brond"><span class="rounded-circle" id="rond"></span></div>
+              <span class="rounded-circle" id="rond"></span>
           </div>
           </div>
         </div>
