--- a/index.html
+++ b/index.html
@@ -88,10 +88,7 @@
      font-weight: bold;
      font-size: 20px;
    }
-   a{
-     text-decoration: none;
-   }
-   @media screen and (max-width: 767px) {
+   @media screen and (max-width: 768px) {
      .cross{
     display: none;
     z-index: -2;
@@ -187,7 +184,7 @@
           <p id="caption">Upcoming <span style="color:#0b8de3;">Projects</span>...</p>
           </div>
           <div class="col-md-12 ml-4">
-            <div>
+            <div class="border">
           <ul>
             <li><span class="definfo">Distance tracker app</span>-This app will help calculate the distance covered over...<sub><a href="#">click here to view more</a></sub></li>
             <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of count...<sub><a href="#">click here to view more</a></sub></li>
