--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="col-md-12">
           <p id="caption">Upcoming <span style="color:#0b8de3;">Projects</span>...</p>
           </div>
-          <div class="col-md-12 ml-4">
+          <div class="col-md-12">
             <div class="border">
           <ul>
             <li><span class="definfo">Distance tracker app</span>-This app will help calculate the distance covered over...<sub><a href="#">click here to view more</a></sub></li>
