--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <meta name="author" content="Kwaku Asare">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+          body{
+            background-color: #f8f9fa;
+          }
         a:link,a:visited {
     color: black;
   }
