--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
           body{
-            background-color: #f8f9fa;
+            background-color:grey
           }
         a:link,a:visited {
     color: black;
