--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      height: auto;
      margin: auto;
      margin-top: 35px;
-     background-color: red;
+     background-color: white;
    }
    #rond{
      background-color:#0b8de3;
@@ -156,7 +156,7 @@
           </ul>
         </div>  
       </nav>
-      <div class="container-fluid">
+      <div class="container-fluid bg-light">
         <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-md-12">
