--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </ul>
         </div>  
       </nav>
-      <div class="container-fluid bg-light">
+      <div class="container-fluid bg-warning">
         <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-md-12">
