--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <meta name="author" content="Kwaku Asare">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+          body{
+            background-color: violet;
+          }
         a:link,a:visited {
     color: black;
   }
@@ -156,7 +159,7 @@
           </ul>
         </div>  
       </nav>
-      <div class="container-fluid bg-warning">
+      <div class="container-fluid">
         <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-md-12">
