--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
-    <body>
+    <body class="bg-warning">
       <nav class="navbar navbar-expand-md bg-light navbar-light">
         <a class="navbar-brand" href="#">
           <span class="h3" id="letterhead"><span style="color: #0b8de3;">MEN</span>SAH</span>
