--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
      width: 93%;
      border-style: solid;
      border-width: 2px;
+     border-radius: 25px;
      height: auto;
      margin: auto;
      margin-top: 35px;
@@ -128,7 +129,7 @@
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
-    <body class="bg-warning">
+    <body class="bg-light">
       <nav class="navbar navbar-expand-md bg-light navbar-light">
         <a class="navbar-brand" href="#">
           <span class="h3" id="letterhead"><span style="color: #0b8de3;">MEN</span>SAH</span>
