--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
     <body class="bg-secondary">
-      <nav class="navbar navbar-expand-md bg-secondary navbar-light">
+      <nav class="navbar navbar-expand-md bg-secondary navbar-secondary">
         <a class="navbar-brand" href="#">
           <span class="h3" id="letterhead"><span style="color: #0b8de3;">MEN</span>SAH</span>
         </a>
