--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
    .shape{
      width: 93%;
      border-style: solid;
-     border-width: 2px;
+     border-width: 1px;
      border-radius: 25px;
+     border-color: white;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
      height: auto;
      margin: auto;
      margin-top: 35px;
@@ -129,8 +131,8 @@
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
-    <body class="bg-secondary">
-      <nav class="navbar navbar-expand-md bg-secondary navbar-secondary">
+    <body class="bg-light">
+      <nav class="navbar navbar-expand-md bg-light navbar-light">
         <a class="navbar-brand" href="#">
           <span class="h3" id="letterhead"><span style="color: #0b8de3;">MEN</span>SAH</span>
         </a>
