Adjusting border and colors

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
      width: 93%;
      border-style: solid;
      border-width: 1px;
-     border-radius: 25px;
+     border-radius: 23px;
      border-color: white;
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
      height: auto;
      margin: auto;
-     margin-top: 35px;
+     margin-top: 30px;
      background-color: white;
    }
    #rond{
@@ -72,8 +72,6 @@
      letter-spacing: 1px;
      font-family: 'Varela Round', sans-serif;
      font-weight: bold;
-     border-style: solid;
-     border-width: 1px;
      margin-left: 24px;
    }
    #lsfont{
@@ -180,7 +178,7 @@
           <p class="dtextinfo">I am Kwaku Asare,a <br>full MERN Stack developer.|</p>
           </div>
           <div class="col-md-6">
-            <div class="border" id="cbrond">
+            <div id="cbrond">
               <span class="rounded-circle" id="rond"></span>
           </div>
           </div>
@@ -191,7 +189,7 @@
           <p id="caption">Upcoming <span style="color:#0b8de3;">Projects</span>...</p>
           </div>
           <div class="col-md-12">
-            <div class="border pl-5 pr-3">
+            <div class="pl-5 pr-3">
           <ul>
             <li><span class="definfo">Distance tracker app</span>-This app will help calculate the distance covered over...<sub><a href="#">click here to view more</a></sub></li>
             <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of count...<sub><a href="#">click here to view more</a></sub></li>
