--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
      position: relative;
    }
    .dtextinfo{
+     border-style: solid;
+     border-width: 2px;
      margin-left: 47px;
      position: relative;
      z-index: 2;
@@ -177,7 +179,7 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond">
-              <span class="rounded-circle" id="rond"></span>
+              <span class="border rounded-circle" id="rond"></span>
           </div>
           </div>
         </div>
