--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
           <p class="dtextinfo">I am Kwaku Asare,a <br>full MERN Stack developer.|</p>
           </div>
           <div class="col-md-6">
-            <div id="cbrond">
-              <span class="border rounded-circle" id="rond"></span>
+            <div class="border" id="cbrond">
+              <span class="rounded-circle" id="rond"></span>
           </div>
           </div>
         </div>
