--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
      border-style: solid;
      border-width: 2px;
      margin-left: 47px;
+     padding-left: 40px;
      position: relative;
      z-index: 2;
      font-weight: bold;
@@ -174,10 +175,10 @@
           </div>
           </div>
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-8">
           <p class="dtextinfo">I am Kwaku Asare,a <br>full MERN Stack developer.|</p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="border" id="cbrond">
               <span class="rounded-circle" id="rond"></span>
           </div>
