--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
      position: relative;
      z-index: 2;
      font-weight: bold;
+     font-size: 30px;
      font-family: 'Source Code Pro', monospace;
    }
    .lsindex{
