--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
      z-index: 2;
      font-weight: bold;
      font-size: 30px;
+     font-weight: lighter;
      font-family: 'Source Code Pro', monospace;
    }
    .lsindex{
