--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
      position: relative;
    }
    .dtextinfo{
-     border-style: solid;
-     border-width: 2px;
      margin-left: 60px;
      position: relative;
      z-index: 2;
@@ -180,7 +178,7 @@
           <p class="dtextinfo">I am Kwaku Asare,a <br>full MERN Stack developer.|</p>
           </div>
           <div class="col-md-6">
-            <div class="border" id="cbrond">
+            <div id="cbrond">
               <span class="rounded-circle" id="rond"></span>
           </div>
           </div>
