--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
     display: none;
   }
   #rond{
-    margin-bottom: 12px;
+    margin-bottom: 10px;
+    width: 250px;
   }
   .brond{
     margin: auto;
