--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
   }
   .cross{
     width: 74px;
+    z-index: 1;
     display:inline-block;
     position:relative;
     left:500%;
     top:-3px;
+   }
+   #plalink{
+     z-index: 2;
    }
    .shape{
      width: 93%;
@@ -158,7 +162,7 @@
               <a class="nav-link" href="#">CONTACT</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#"><span style="color: #0b8de3;">RESUME</span></a>
+            <a class="nav-link" id="plalink" href="#"><span style="color: #0b8de3;">RESUME</span></a>
             </li>    
           </ul>
         </div>  
