--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   }
   .cross{
     width: 74px;
-    z-index: -1;
+    z-index: 2;
     display:inline-block;
     position:relative;
     left:500%;
@@ -41,6 +41,8 @@
    }
    #plalink{
      background-color: red;
+     z-index: 3;
+     position: relative;
    }
    .shape{
      width: 93%;
