--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    .shape{
      width: 93%;
      border-radius: 23px;
-     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
      height: auto;
      margin: auto;
      margin-top: 20px;
