--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
      letter-spacing: 1px;
      font-family: 'Varela Round', sans-serif;
      font-weight: bolder;
+     margin-top: 4px;
+     margin-left: 20px;
    }
    #caption{
      letter-spacing: 1.5px;
