--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
      letter-spacing: 1px;
      font-family: 'Varela Round', sans-serif;
      font-weight: bolder;
-     margin-top: 10px;
+     padding-top: 10px;
      margin-left: 20px;
    }
    #caption{
