--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
      height: auto;
      margin: auto;
      margin-top: 20px;
+     margin-bottom: 10px;
      background-color: white;
    }
    #rond{
