--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
           <div class="col-md-12">
             <div class="pl-5 pr-3">
           <ul>
-            <li><span class="definfo">Distance tracker app</span>-This app will help calculate the distance covered over...<sub><a href="#">click here to view more</a></sub></li>
-            <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of count...<sub><a href="#">click here to view more</a></sub></li>
+            <li><span class="definfo">Distance tracker app</span>-This app will help calculate the distance covered over...<sub><a href="#" style="text-decoration: none;">click here to view more</a></sub></li>
+            <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of count...<sub><a href="#" style="text-decoration: none;">click here to view more</a></sub></li>
           </ul>
           </div>
           </div>
