--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   }
   a:hover{
       color: white;
-      font-size: 25px;
+      font-weight: bolder;
   }
   a:active{
       color: lightskyblue;
