--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   a:hover{
       color: white;
       font-weight: bolder;
+      font-size: 18px;
   }
   a:active{
       color: lightskyblue;
@@ -148,7 +149,7 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item" id="objflex">
+            <li class="nav-item">
               <img src="images/crossimg.png" alt="beam-of-lines" class="cross">
             </li>
             <li class="nav-item">
