Adding of side image

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
      margin:auto;
      position: relative;
    }
+   .imgpost{
+     display: block;
+     position: relative;
+     width: 300px;
+     height: 320px;
+   }
    .dtextinfo{
      margin-left: 60px;
      position: relative;
@@ -188,7 +194,9 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond">
-              <span class="rounded-circle" id="rond"></span>
+              <span class="rounded-circle" id="rond">
+                <img src="/images/proback.png" class="imgpost">
+              </span>
           </div>
           </div>
         </div>
