--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="col-md-6">
             <div id="cbrond">
               <span class="rounded-circle" id="rond">
-                <img src="/images/proback.png" class="imgpost">
+                <img src="/images/proback.png" width="300px" height="320px">
               </span>
           </div>
           </div>
