--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="col-md-6">
             <div id="cbrond">
               <span class="rounded-circle" id="rond">
-                <img src="/images/proback.png" width="300px" height="320px">
+                <p>Kwaku is a boy</p>
               </span>
           </div>
           </div>
@@ -212,6 +212,9 @@
             <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of count...<sub><a href="#" style="text-decoration: none;">click here to view more</a></sub></li>
           </ul>
           </div>
+          </div>
+          <div class="col-md-12">
+            <img src="/images/proback.png" class="imgpost">
           </div>
           </div>
         </div>
