--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
    .imgpost{
      display: block;
      position: relative;
-     width: 400px;
+     width: 440px;
      height: 340px;
      top: -120px;
+     right: -30px;
    }
    .dtextinfo{
      margin-left: 60px;
