--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
     width: 250px;
     height: 220px;
   }
+  .imgpost{
+    position: relative;
+    margin: auto;
+    top: 0px;
+    right: 0px;
+    width: 220px;
+    height: 200px;
+  }
   .brond{
     margin: auto;
     float: none;
