--- a/index.html
+++ b/index.html
@@ -54,21 +54,12 @@
      margin-bottom: 10px;
      background-color: white;
    }
-   #rond{
-     background-color:#0b8de3;
+   .portimg{
      display: block;
-     width: 320px;
-     height: 270px;
-     margin:auto;
+     margin: auto;
+     width: 400px;
+     height: 350px;
      position: relative;
-   }
-   .imgpost{
-     display: block;
-     position: relative;
-     width: 465px;
-     height: 340px;
-     top: -120px;
-     right: 70px;
    }
    .dtextinfo{
      margin-left: 60px;
@@ -112,25 +103,6 @@
   }
   .shapepro{
     display: none;
-  }
-  #rond{
-    margin-bottom: 10px;
-    width: 250px;
-    height: 220px;
-  }
-  .imgpost{
-    position: relative;
-    margin: auto;
-    top: 0px;
-    right: 0px;
-    width: 360px;
-    height: 200px;
-    top: -24px;
-    right: 55px;
-  }
-  .brond{
-    margin: auto;
-    float: none;
   }
   .dtextinfo,#lsfont,.lsindex{
     text-align: center;
@@ -206,9 +178,7 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond">
-              <span class="rounded-circle" id="rond">
-                <img src="images/proback.png" alt="Porfolio image" class="imgpost">
-              </span>
+              <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
           </div>
           </div>
         </div>
