--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond" class="border">
+              <div class="mx-auto border">
               <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
+              </div>
           </div>
           </div>
         </div>
