--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
      margin-bottom: 10px;
      background-color: white;
    }
+   #bsimage{
+     margin: auto;
+     border-style: solid;
+     border-width: 1px;
+   }
    .portimg{
      display: block;
      margin: auto;
@@ -180,7 +185,7 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond" class="border">
-              <div class="mx-auto border">
+              <div id="bsimg">
               <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
               </div>
           </div>
