--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
      margin-bottom: 10px;
      background-color: white;
    }
-   #bsimag{
+   #bsimg{
      margin: auto;
      border-style: solid;
      border-width: 1px;
