--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
    }
    #bsimg{
      margin: auto;
+     height: auto;
      border-style: solid;
      border-width: 1px;
    }
    .portimg{
      display: block;
-     margin: auto;
      width: 600px;
      height: 280px;
      position: relative;
