--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
      background-color: white;
    }
    #bsimg{
+     display: block;
      margin: auto;
      height: auto;
      border-style: solid;
