--- a/index.html
+++ b/index.html
@@ -54,18 +54,11 @@
      margin-bottom: 10px;
      background-color: white;
    }
-   #bsimg{
-     display: block;
-     margin: auto;
-     height: auto;
-     border-style: solid;
-     border-width: 1px;
-   }
    .portimg{
      display: block;
-     width: 600px;
-     height: 280px;
-     position: relative;
+     width: 60%;
+     margin-left: auto;
+     margin-right: auto;
    }
    .dtextinfo{
      margin-left: 60px;
@@ -186,9 +179,7 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond" class="border">
-              <div id="bsimg">
               <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
-              </div>
           </div>
           </div>
         </div>
