--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
    }
    .portimg{
      display: block;
+     position: relative;
+     top: -60px;
      width: 100%;
      margin-left: auto;
      margin-right: auto;
