--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
      display: block;
      position: relative;
      top: -60px;
-     width: 150%;
+     width: 400px;
+     height: 350px;
      margin-left: auto;
      margin-right: auto;
    }
