--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
      height: 350px;
      margin-left: auto;
      margin-right: auto;
+     left: 0px;
    }
    .dtextinfo{
      margin-left: 60px;
