--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
      margin-bottom: 10px;
      background-color: white;
    }
+   .left{
+     width: 70%;
+     margin: auto;
+     border-width: 2px;
+     border-style: solid;
+     border-color: chocolate;
+   }
    .portimg{
      display: block;
      position: relative;
@@ -183,8 +190,10 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond" class="border">
+              <div class="left">
               <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
-          </div>
+              </div>   
+            </div>
           </div>
         </div>
         <div class="row">
