--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
      margin-bottom: 10px;
      background-color: white;
    }
-   .left{
+   .leftb{
      width: 70%;
      margin: auto;
      border-width: 2px;
@@ -65,8 +65,6 @@
      display: block;
      width: 700px;
      height: 350px;
-     margin-left: auto;
-     margin-right: auto;
    }
    .dtextinfo{
      margin-left: 60px;
@@ -187,7 +185,7 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond" class="border">
-              <div class="left">
+              <div class="leftb">
               <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
               </div>   
             </div>
