--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
   #letterhead{
     font-family: 'Monoton', cursive;
   }
+  .portimg{
+    display: block;
+    width: 400px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .cross{
     width: 74px;
     z-index: 1;
