--- a/index.html
+++ b/index.html
@@ -32,13 +32,6 @@
   #letterhead{
     font-family: 'Monoton', cursive;
   }
-  .portimg{
-    display: block;
-    width: 600px;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-  }
   .cross{
     width: 74px;
     z-index: 1;
@@ -71,6 +64,11 @@
      font-family: 'Source Code Pro', monospace;
      border-style: solid;
      border-width: 2px;
+   }
+   .brond{
+     border-color: darkblue;
+     border-width: 2px;
+     border-style: solid;
    }
    .lsindex{
      letter-spacing: 1px;
@@ -180,7 +178,9 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond" class="border">
-              <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
+              <div class="brond">
+              <img src="images/sideig.png" alt="Side-img portfolio" class="portimg">
+              </div>
             </div>
           </div>
         </div>
