--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
      border-color: darkblue;
      border-width: 2px;
      border-style: solid;
+     width: 70%;
+     height: auto;
+   }
+   .portimg{
+     width: 200px;
+     height: 200px;
+     display: inline-block;
    }
    .lsindex{
      letter-spacing: 1px;
@@ -179,7 +186,7 @@
           <div class="col-md-6">
             <div id="cbrond" class="border">
               <div class="brond">
-              <img src="images/sideig.png" alt="Side-img portfolio" class="portimg">
+              <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
               </div>
             </div>
           </div>
