--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
      width: 500px;
      height: 270px;
      display: inline-block;
+     margin-left: auto;
+     margin-right: auto;
    }
    .lsindex{
      letter-spacing: 1px;
