--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
    .portimg{
      width: 500px;
      height: 270px;
-     display: inline-block;
+     display: block;
      margin-left: auto;
      margin-right: auto;
    }
