--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
      margin: auto;
    }
    .portimg{
-     width: 500px;
+     width: 50%;
      height: 270px;
      display: block;
      margin-left: auto;
