--- a/index.html
+++ b/index.html
@@ -74,10 +74,13 @@
      margin: auto;
    }
    .portimg{
-     width: 80%;
+     width: 100%;
      display: block;
      margin-left: auto;
      margin-right: auto;
+     position: relative;
+     z-index: -1;
+
    }
    .lsindex{
      letter-spacing: 1px;
