--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
      margin: auto;
    }
    .portimg{
-     width: 100%;
+     width: 500px;
      display: block;
      margin-left: auto;
      margin-right: auto;
