--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
      margin-right: auto;
      position: relative;
      z-index: 2;
-
+     right:50px;
    }
    .lsindex{
      letter-spacing: 1px;
