--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
      border-color: darkblue;
      border-width: 2px;
      border-style: solid;
-     width: 90%;
+     width: 900px;
      height: auto;
      margin: auto;
    }
