--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
      margin: auto;
    }
    .portimg{
-     width: 500px;
+     width: 900px;
+     height: 250px;
      display: block;
      margin-left: auto;
      margin-right: auto;
