--- a/index.html
+++ b/index.html
@@ -65,23 +65,9 @@
      border-style: solid;
      border-width: 2px;
    }
-   .brond{
-     border-color: darkblue;
-     border-width: 2px;
-     border-style: solid;
-     width: 500px;
-     height: auto;
-     margin: auto;
-   }
    .portimg{
-     width: 900px;
-     height: 300px;
-     display: block;
-     margin-left: auto;
-     margin-right: auto;
-     position: relative;
-     z-index: 2;
-     right:190px;
+     background-color: red;
+     width: 100%;
    }
    .lsindex{
      letter-spacing: 1px;
@@ -191,9 +177,7 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond" class="border">
-              <div class="brond">
               <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
-              </div>
             </div>
           </div>
         </div>
