--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
    }
    .portimg{
      background-color: red;
-     width: 100%;
+     display: block;
+     width: 350px;
    }
    .lsindex{
      letter-spacing: 1px;
