--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
    .portimg{
      background-color: red;
      display: block;
-     width: 350px;
+     width: 400px;
+     z-index: 2;
+     position: absolute;
    }
    .lsindex{
      letter-spacing: 1px;
