--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
      border-style: solid;
      border-width: 2px;
    }
-   .portimg{
-     background-color: red;
-     width: 400px;
-   }
    .lsindex{
      letter-spacing: 1px;
      font-family: 'Varela Round', sans-serif;
@@ -177,7 +173,7 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond" class="border">
-              <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
+              <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg" width="400px" height="320px">
             </div>
           </div>
         </div>
