--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
      margin-bottom: 10px;
      background-color: white;
    }
+   .portimg{
+     width: 100%;
+     height: auto;
+   }
    .dtextinfo{
      margin-left: 60px;
      position: relative;
@@ -173,7 +177,7 @@
           </div>
           <div class="col-md-6">
             <div id="cbrond" class="border">
-              <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg" width="400px" height="800px">
+              <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
             </div>
           </div>
         </div>
