--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
    .portimg{
      width: 100%;
      height: auto;
+     position: relative;
+     margin-bottom: 10px;
+     left: 0px;
    }
    .dtextinfo{
      margin-left: 60px;
