--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
      background-color: white;
    }
    .portimg{
-     width: 100%;
+     width: 400px;
      height: auto;
      position: relative;
-     margin-bottom: 10px;
+     margin-bottom: 20px;
      left: 0px;
    }
    .dtextinfo{
