--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
    .portimg{
      width: 400px;
      height: auto;
+     display: block;
      position: relative;
-     margin-bottom: 20px;
-     left: 0px;
+     border-radius: 50%;
    }
    .dtextinfo{
      margin-left: 60px;
