--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
    .portimg{
      width: 320px;
      display: block;
-     position: relative;
-     border-radius: 30%;
+     border-radius: 50%;
+     margin-left: auto;
+     margin-right: auto;
    }
    .dtextinfo{
      margin-left: 60px;
