--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
    }
    .dtextinfo{
      margin-left: 66px;
+     padding-left: 5px;
      font-weight: bold;
      font-size: 24px;
      font-weight: lighter;
