--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
   .shapepro{
     display: none;
   }
+  .portimg{
+    width: 280px;
+  }
   .dtextinfo,#lsfont,.lsindex{
     text-align: center;
     padding-left: 0px;
