--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
      background-color: white;
    }
    .portimg{
-     width: 320px;
+     width: 80%;
      display: block;
      border-radius: 50%;
      margin-left: auto;
@@ -103,9 +103,6 @@
   }
   .shapepro{
     display: none;
-  }
-  .portimg{
-    width: 280px;
   }
   .dtextinfo,#lsfont,.lsindex{
     text-align: center;
