--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
      font-size: 24px;
      font-weight: lighter;
      font-family: 'Source Code Pro', monospace;
-     border-style: solid;
-     border-width: 2px;
    }
    .lsindex{
      letter-spacing: 1px;
@@ -177,7 +175,7 @@
           <p class="dtextinfo">I am Kwaku Asare,a <br>full MERN Stack developer.|</p>
           </div>
           <div class="col-md-6">
-            <div id="cbrond" class="border">
+            <div id="cbrond">
               <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
             </div>
           </div>
