--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
      background-color: white;
    }
    .portimg{
-     width: 60%;
+     width: 320px;
      display: block;
      border-radius: 50%;
      margin-left: auto;
@@ -101,6 +101,9 @@
   }
   .shapepro{
     display: none;
+  }
+  .portimg{
+    width: 280px;
   }
   .dtextinfo,#lsfont,.lsindex{
     text-align: center;
