--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
      background-color: white;
    }
    .portimg{
-     width: 320px;
+     width: 340px;
      display: block;
      border-radius: 50%;
      margin-left: auto;
      margin-right: auto;
+     padding-bottom: 20px;
    }
    .dtextinfo{
      margin-left: 69px;
