--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
      border-radius: 50%;
      margin-left: auto;
      margin-right: auto;
-     padding-bottom: 20px;
+     margin-top: -30px;
    }
    .dtextinfo{
      margin-left: 69px;
