Adding React to website #1

--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-          <p class="dtextinfo">I am Kwaku Asare,a <br>full MERN Stack developer.|</p>
+              <div id="app">
+              </div>
           </div>
           <div class="col-md-6">
             <div id="cbrond">
