--- a/index.html
+++ b/index.html
@@ -203,6 +203,6 @@
         </div>
       </div>
       </div>
-        <script type="text/babel" src="scripts/index.js"></script>
+        <script type="text/babel" src="/scripts/index.js"></script>
     </body>
 </html>
