importing javascript es6

--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
      font-weight: bold;
      font-size: 20px;
    }
+   span#type{
+  animation: blinker 1s linear infinite;
+}
+@keyframes blinker{
+  50%{
+    opacity: 0;
+  }
+}
    @media screen and (max-width: 768px) {
      .cross{
     display: none;
@@ -127,9 +135,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-        <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
     <body class="bg-gradient-light">
       <nav class="navbar navbar-expand-md bg-gradient-light navbar-light">
