Recreating the typewriter effect

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
      font-weight: bold;
      font-size: 20px;
    }
-   span#type{
+   code{
   animation: blinker 1s linear infinite;
+  font-weight: bold;
+  font-size: 24px;
 }
 @keyframes blinker{
   50%{
@@ -182,8 +184,8 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div id="app">
-              </div>
+              <p class="dtextinfo">
+              </p>
           </div>
           <div class="col-md-6">
             <div id="cbrond">
