--- a/index.html
+++ b/index.html
@@ -210,6 +210,6 @@
         </div>
       </div>
       </div>
-        <script type="text/babel" src="index.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
