--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
   animation: blinker 1s linear infinite;
   font-weight: bold;
   font-size: 24px;
+  color: black;
 }
 @keyframes blinker{
   50%{
