--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
      font-size: 24px;
      font-weight: lighter;
      font-family: 'Source Code Pro', monospace;
+     height: 72px;
    }
    .lsindex{
      letter-spacing: 1px;
@@ -125,6 +126,7 @@
   }
   .dtextinfo{
     margin-top: 15px;
+    height: 106px;
   }
   #lsindex{
     margin-top: 30px;
