--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
      font-weight: lighter;
      font-family: 'Source Code Pro', monospace;
      height: 72px;
+     width: 500px;
    }
    .lsindex{
      letter-spacing: 1px;
