--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
     .cross{
     display: none;
   }
+  .shapepro{
+    display: none;
+  }
   .portimg{
     width: 240px;
     margin-bottom: 5px;
@@ -127,14 +130,6 @@
   #lsindex{
     margin-top: 30px;
   }
-  code{
-  animation: blinker 1s linear infinite;
-}
-@keyframes blinker{
-  0%{
-    opacity: 1;
-  }
-}
 }
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
