--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
   #lsindex{
     margin-top: 30px;
   }
+  code{
+    animation-name: none;
+  }
 }
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
