--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
           </div>
         </div>
         <div class="row">
+          <div class="d-md-none d-lg-block">
           <div class="shapepro">
           <div class="col-md-12">
           <p id="caption">Upcoming <span style="color:#0b8de3;">Projects</span>...</p>
@@ -197,6 +198,7 @@
             <li><span class="definfo">Distance tracker app</span>-This app will help calculate the distance covered over...<sub><a href="#" style="text-decoration: none;">click here to view more</a></sub></li>
             <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of count...<sub><a href="#" style="text-decoration: none;">click here to view more</a></sub></li>
           </ul>
+          </div>
           </div>
           </div>
           </div>
