--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="d-md-none d-lg-block">
+          <div class="d-md-none">
           <div class="shapepro">
           <div class="col-md-12">
           <p id="caption">Upcoming <span style="color:#0b8de3;">Projects</span>...</p>
