--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item d-none d-md-block">
               <img src="images/crossimg.png" alt="beam-of-lines" class="cross">
             </li>
             <li class="nav-item">
