--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
     opacity: 0;
   }
 }
+@media screen and (max-width: 293px){
+  .portimg{
+    width: 190px;
+    margin-bottom: 5px;
+  }
+}
    @media screen and (max-width: 768px) {
   .portimg{
     width: 240px;
