--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
     width: 60px;
     margin-bottom: 5px;
   }
+  .lsindex{
+    background-color: green;
+  }
 }
    @media screen and (max-width: 768px) {
   .portimg{
