--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
     opacity: 0;
   }
 }
-@media screen and (max-width: 280px){
+@media screen and (max-width: 290px){
   .portimg{
     width: 30px;
     margin-bottom: 5px;
+    display: block;
   }
   .lsindex{
     background-color: green;
