--- a/index.html
+++ b/index.html
@@ -165,22 +165,22 @@
       <div class="container-fluid">
         <div class="shape">
         <div class="row mt-1 pl-2">
-          <div class="col-12">
+          <div class="col-md-12">
             <p class="h1" id="lsfont"><span style="color:#0b8de3;">Hello </span> World</p>
           </div>
         </div>
         <div style="height: 30px;"></div>
         <div class="row">
-          <div class="col-12">
+          <div class="col-md-12">
           <h2 class="lsindex">Welcome to my website</h2>
           </div>
           </div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-md-6">
               <p class="dtextinfo">
               </p>
           </div>
-          <div class="col-6">
+          <div class="col-md-6">
             <div id="cbrond">
               <img src="images/sideimg.png" alt="Side-img portfolio" class="portimg">
             </div>
