--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
     margin-top: 30px;
   }
 }
+@media screen and (max-width: 300px){
+  .portimg{
+    width: 100px;
+  }
+}
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
