--- a/index.html
+++ b/index.html
@@ -128,7 +128,15 @@
 @media screen and (max-width: 300px){
   .portimg{
     width: 180px;
-    margin-top: 20px;
+  }
+  .dtextinfo{
+    font-size: 16px;
+  }
+  #lsindex{
+    font-size: 16px;
+  }
+  #lsfont{
+    font-size: 24px;
   }
 }
         </style>
