--- a/index.html
+++ b/index.html
@@ -128,15 +128,16 @@
 @media screen and (max-width: 300px){
   .portimg{
     width: 190px;
+    margin-top: -5px;
   }
   .dtextinfo{
-    font-size: 20px;
+    font-size: 18px;
   }
   #lsindex{
-    font-size: 20px;
+    font-size: 18px;
   }
   #lsfont{
-    font-size: 28px;
+    font-size: 30px;
   }
 }
         </style>
