--- a/index.html
+++ b/index.html
@@ -26,6 +26,46 @@
   a:active{
       color: lightskyblue;
   }
+  @keyframes example {
+  0%   {background-color: lightblue; width: 2.5%;}
+  5%  {background-color: lightblue; width: 5%;}
+  10% {background-color: lightblue; width: 7.5%;}
+  15% {background-color: lightblue; width: 10%;}
+  20% {background-color: lightblue; width: 12.5%;}
+  25% {background-color: lightblue; width: 15%;}
+  30% {background-color: lightblue; width: 17.5%;}
+  35% {background-color: lightblue; width: 20%;}
+  40% {background-color: lightblue; width: 22.5%;}
+  45% {background-color: lightblue; width: 25%;}
+  50% {background-color: lightblue; width: 27.5%;}
+  55% {background-color: lightblue; width: 30%;}
+  60% {background-color: lightblue; width: 32.5%;}
+  65% {background-color: lightblue; width: 35%;}
+  70% {background-color: lightblue; width: 37.5%;}
+  75% {background-color: lightblue; width: 40%;}
+  80% {background-color: lightblue; width: 42.5%;}
+  85% {background-color: lightblue; width: 45%;}
+  90% {background-color: lightblue; width: 47.5%;}
+  95% {background-color: lightblue; width: 50%;}
+  100% {background-color: lightblue; width: 52.5%;}
+}
+span.mborder{
+  width: 100%;
+  height: 5px;
+}
+span.mbar{
+  display: none;
+}
+li.nav-item:hover span.mbar{
+  display: block;
+  border-radius: 5px;
+  width: 52.5%;
+  height: 5px;
+  display: block;
+  background-color: lightblue;
+  animation-name: example;
+  animation-duration: 0.4s;
+}
   #letterhead{
     font-family: 'Monoton', cursive;
   }
@@ -161,15 +201,19 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">HOME</a>
+              <span class="mborder"><span class="bar"></span></span>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">PROJECTS</a>
+              <span class="mborder"><span class="mbar"></span></span>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">ABOUT</a>
+              <span class="mborder"><span class="mbar"></span></span>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">CONTACT</a>
+              <span class="mborder"><span class="mbar"></span></span>
             </li>
             <li class="nav-item">
             <a class="nav-link" id="plalink" href="#"><span style="color: #0b8de3;">RESUME</span></a>
