--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ li.nav-item:hover span.mbar{
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">HOME</a>
-              <span class="mborder"><span class="bar"></span></span>
+              <span class="mborder"><span class="mbar"></span></span>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">PROJECTS</a>
