--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ span.mborder{
   width: 100%;
   height: 5px;
   display: block;
-  margin: auto;
+  margin-right: 20px;
 }
 span.mbar{
   display: none;
