--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ span.mborder{
   width: 100%;
   height: 5px;
   display: block;
+  position: relative;
 }
 span.mbar{
   display: none;
@@ -66,6 +67,8 @@ li.nav-item:hover span.mbar{
   background-color: lightblue;
   animation-name: example;
   animation-duration: 0.4s;
+  position: relative;
+  left: 10px;
 }
   #letterhead{
     font-family: 'Monoton', cursive;
