--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ li.nav-item:hover span.mbar{
   animation-name: example;
   animation-duration: 0.4s;
   position: relative;
-  left: 10px;
+  left: 9px;
+  top: -5px;
 }
   #letterhead{
     font-family: 'Monoton', cursive;
