--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ li.nav-item:hover span.mbar{
   left: 9px;
   top: -10px;
 }
+#lsfont,.lsindex,#caption,#lsfont,.definfo,.dtextinfo{
+  cursor: default;
+}
   #letterhead{
     font-family: 'Monoton', cursive;
   }
@@ -193,9 +196,7 @@ li.nav-item:hover span.mbar{
     </head>
     <body class="bg-gradient-light">
       <nav class="navbar navbar-expand-md bg-gradient-light navbar-light">
-        <a class="navbar-brand" href="#">
-          <span class="h3" id="letterhead"><span style="color: #0b8de3;">MEN</span>SAH</span>
-        </a>
+          <span class="h3 navbar-brand" id="letterhead"><span style="color: #0b8de3;">MEN</span>SAH</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
