--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ li.nav-item:hover span.mbar{
   left: 9px;
   top: -10px;
 }
-#lsfont,.lsindex,#caption,#lsfont,.definfo,.dtextinfo{
+#lsfont,.lsindex,#caption,#lsfont,.dtextinfo,.coninfo,#letterhead{
   cursor: default;
 }
   #letterhead{
@@ -260,8 +260,8 @@ li.nav-item:hover span.mbar{
           <div class="col-md-12">
             <div class="pl-5 pr-3">
           <ul>
-            <li><span class="definfo">Distance tracker app</span>-This app will help calculate the distance covered over...<sub><a href="#" style="text-decoration: none;">click here to view more</a></sub></li>
-            <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of count...<sub><a href="#" style="text-decoration: none;">click here to view more</a></sub></li>
+            <li class="coninfo"><span class="definfo">Distance tracker app</span>-This app will help calculate the distance covered over...<sub><a href="#" style="text-decoration: none;">click here to view more</a></sub></li>
+            <li class="coninfo"><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of count...<sub><a href="#" style="text-decoration: none;">click here to view more</a></sub></li>
           </ul>
           </div>
           </div>
