--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ li.nav-item:hover span.mbar{
               <span class="mborder"><span class="mbar"></span></span>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="about.html" target="_self">ABOUT</a>
               <span class="mborder"><span class="mbar"></span></span>
             </li>
             <li class="nav-item">
