--- a/about.html
+++ b/about.html
@@ -91,6 +91,9 @@ li.nav-item:hover span.mbar{
      z-index: 2;
      position: relative;
    }
+   li{
+    font-family: 'Source Code Pro', monospace;
+   }
         </style>
     </head>
     <body>
