--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@ li.nav-item:hover span.mbar{
     width: 240px;
     margin-bottom: 5px;
   }
+  span.mborder,span.mbar{
+    display: none;
+  }
   .dtextinfo,#lsfont,.lsindex{
     text-align: center;
     padding-left: 0px;
