--- a/index.html
+++ b/index.html
@@ -157,9 +157,6 @@ li.nav-item:hover span.mbar{
     width: 240px;
     margin-bottom: 5px;
   }
-  span.mborder,span.mbar{
-    display: none;
-  }
   .dtextinfo,#lsfont,.lsindex{
     text-align: center;
     padding-left: 0px;
@@ -210,19 +207,19 @@ li.nav-item:hover span.mbar{
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">HOME</a>
-              <span class="mborder"><span class="mbar"></span></span>
+              <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">PROJECTS</a>
-              <span class="mborder"><span class="mbar"></span></span>
+              <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html" target="_self">ABOUT</a>
-              <span class="mborder"><span class="mbar"></span></span>
+              <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">CONTACT</a>
-              <span class="mborder"><span class="mbar"></span></span>
+              <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
             </li>
             <li class="nav-item">
             <a class="nav-link" id="plalink" href="#"><span style="color: #0b8de3;">RESUME</span></a>
