--- a/about.html
+++ b/about.html
@@ -110,19 +110,19 @@ li.nav-item:hover span.mbar{
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="index.html" target="_self">HOME</a>
-                    <span class="mborder"><span class="mbar"></span></span>
+                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">PROJECTS</a>
-                    <span class="mborder"><span class="mbar"></span></span>
+                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html" target="_self">ABOUT</a>
-                    <span class="mborder"><span class="mbar"></span></span>
+                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">CONTACT</a>
-                    <span class="mborder"><span class="mbar"></span></span>
+                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                   </li>
                   <li class="nav-item">
                   <a class="nav-link" id="plalink" href="#"><span style="color: #0b8de3;">RESUME</span></a>
