--- a/links/about.html
+++ b/links/about.html
@@ -109,7 +109,7 @@ li.nav-item:hover span.mbar{
                     <img src="images/crossimg.png" alt="beam-of-lines" class="cross">
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html" target="_self">HOME</a>
+                    <a class="nav-link" href="../index.html" target="_self">HOME</a>
                     <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                   </li>
                   <li class="nav-item">
