--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ li.nav-item:hover span.mbar{
               <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" target="_self">ABOUT</a>
+              <a class="nav-link" href="links/about.html" target="_self">ABOUT</a>
               <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
             </li>
             <li class="nav-item">
@@ -270,6 +270,6 @@ li.nav-item:hover span.mbar{
         </div>
       </div>
       </div>
-        <script src="index.js"></script>
+        <script src="scripts/index.js"></script>
     </body>
 </html>
