--- a/links/about.html
+++ b/links/about.html
@@ -106,7 +106,7 @@ li.nav-item:hover span.mbar{
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item d-none d-md-block">
-                    <img src="images/crossimg.png" alt="beam-of-lines" class="cross">
+                    <img src="../images/crossimg.png" alt="beam-of-lines" class="cross">
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../index.html" target="_self">HOME</a>
