Drawing layout for the about page

--- a/links/about.html
+++ b/links/about.html
@@ -130,5 +130,26 @@ li.nav-item:hover span.mbar{
                 </ul>
               </div>  
             </nav>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12 border">
+                  ABOUT ME //
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6 border">
+                  <img src="jhj.png" alt="THE image should be here">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12 border">
+                  List of menu
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 border">Free Space</div>
+                <div class="col-md-8 border">Info</div>
+              </div>
+            </div>
     </body>
 </html>
