--- a/links/about.html
+++ b/links/about.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Kwaku Asare</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="images/webicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="images/webicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="images/webicon/favicon-16x16.png">
-        <link rel="icon" href="images/webicon/favicon.ico">
-        <link rel="manifest" href="images/webicon/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="../images/webicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../images/webicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../images/webicon/favicon-16x16.png">
+        <link rel="icon" href="../images/webicon/favicon.ico">
+        <link rel="manifest" href="../images/webicon/site.webmanifest">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Source+Code+Pro:wght@200&family=Varela+Round&display=swap" rel="stylesheet">
