--- a/links/about.html
+++ b/links/about.html
@@ -94,6 +94,10 @@ li.nav-item:hover span.mbar{
      z-index: 2;
      position: relative;
     }
+    .falseon{
+      width: 400px;
+      height: auto;
+    }
     </style>
     </head>
     <body>
@@ -138,7 +142,7 @@ li.nav-item:hover span.mbar{
               </div>
               <div class="row">
                 <div class="col-md-6 border">
-                  <img src="jhj.png" alt="THE image should be here">
+                  <img src="../images/false.png" alt="THE image should be here" class="falseon">
                 </div>
               </div>
               <div class="row">
