--- a/links/about.html
+++ b/links/about.html
@@ -137,7 +137,16 @@ li.nav-item:hover span.mbar{
             <div class="container-fluid">
               <div class="row">
                 <div class="col-md-12 border">
-                  ABOUT ME //
+                  <span>/</span>
+                  <span>/</span>
+                  <span>A</span>
+                  <span>B</span>
+                  <span>O</span>
+                  <span>U</span>
+                  <span>T</span>
+                  <span>T</span>
+                  <span>M</span>
+                  <span>E</span>
                 </div>
               </div>
               <div class="row">
