--- a/links/about.html
+++ b/links/about.html
@@ -98,6 +98,9 @@ li.nav-item:hover span.mbar{
       width: 400px;
       height: auto;
     }
+    .shape{
+      width: 80%;
+    }
     </style>
     </head>
     <body>
@@ -135,18 +138,10 @@ li.nav-item:hover span.mbar{
               </div>  
             </nav>
             <div class="container-fluid">
+              <div class="shape">
               <div class="row">
                 <div class="col-md-12 border">
-                  <span>/</span>
-                  <span>/</span>
-                  <span>A</span>
-                  <span>B</span>
-                  <span>O</span>
-                  <span>U</span>
-                  <span>T</span>
-                  <span>T</span>
-                  <span>M</span>
-                  <span>E</span>
+                  <span class="h2">/</span><span class="h1">/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
                 </div>
               </div>
               <div class="row">
@@ -162,6 +157,7 @@ li.nav-item:hover span.mbar{
               <div class="row">
                 <div class="col-md-4 border">Free Space</div>
                 <div class="col-md-8 border">Info</div>
+              </div>
               </div>
             </div>
     </body>
