--- a/links/about.html
+++ b/links/about.html
@@ -102,6 +102,9 @@ li.nav-item:hover span.mbar{
       width: 92%;
       margin: auto;
     }
+    .bhead{
+      margin: auto;
+    }
     </style>
     </head>
     <body>
@@ -142,8 +145,10 @@ li.nav-item:hover span.mbar{
               <div class="shape">
               <div class="row">
                 <div class="col-md-12 border">
+                  <div class="bhead">
                   <span class="h2">/</span><span class="h1">/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
                 </div>
+              </div>
               </div>
               <div class="row">
                 <div class="col-md-6 border">
