--- a/links/about.html
+++ b/links/about.html
@@ -103,6 +103,7 @@ li.nav-item:hover span.mbar{
       margin: auto;
     }
     .bhead{
+      width: 100%;
       margin: auto;
     }
     </style>
