--- a/links/about.html
+++ b/links/about.html
@@ -105,6 +105,9 @@ li.nav-item:hover span.mbar{
     .bhead{
       width: 100%;
       margin: auto;
+      height: auto;
+      border-style: solid;
+      border-width: 2px;
     }
     </style>
     </head>
