--- a/links/about.html
+++ b/links/about.html
@@ -99,7 +99,7 @@ li.nav-item:hover span.mbar{
       height: auto;
     }
     .shape{
-      width: 92%;
+      width: auto;
       margin: auto;
     }
     .bhead{
