--- a/links/about.html
+++ b/links/about.html
@@ -99,8 +99,9 @@ li.nav-item:hover span.mbar{
       height: auto;
     }
     .shape{
-      width: auto;
+      width: 40%;
       margin: auto;
+      text-align: center;
     }
     .bhead{
       width: 40%;
