--- a/links/about.html
+++ b/links/about.html
@@ -109,6 +109,8 @@ li.nav-item:hover span.mbar{
       border-style: solid;
       border-width: 2px;
       text-align: center;
+      position: relative;
+      top: -70px;
     }
     </style>
     </head>
