--- a/links/about.html
+++ b/links/about.html
@@ -102,6 +102,10 @@ li.nav-item:hover span.mbar{
       width: 92%;
       margin: auto;
     }
+    .imghead{
+      width: 80%;
+      margin: auto;
+    }
     .bhead{
       width: 40%;
       margin: auto;
@@ -159,7 +163,9 @@ li.nav-item:hover span.mbar{
               </div>
               <div class="row">
                 <div class="col-md-6 border">
+                  <div class="imghead">
                   <img src="../images/false.png" alt="THE image should be here" class="falseon">
+                  </div>
                 </div>
               </div>
               <div class="row">
