--- a/links/about.html
+++ b/links/about.html
@@ -97,13 +97,12 @@ li.nav-item:hover span.mbar{
     .falseon{
       width: 600px;
       height: auto;
+      display: block;
+      position: relative;
+      top: -20px;
     }
     .shape{
       width: 92%;
-      margin: auto;
-    }
-    .imghead{
-      width: 80%;
       margin: auto;
     }
     .bhead{
@@ -163,9 +162,7 @@ li.nav-item:hover span.mbar{
               </div>
               <div class="row">
                 <div class="col-md-6 border">
-                  <div class="imghead">
                   <img src="../images/false.png" alt="THE image should be here" class="falseon">
-                  </div>
                 </div>
               </div>
               <div class="row">
