--- a/links/about.html
+++ b/links/about.html
@@ -99,7 +99,7 @@ li.nav-item:hover span.mbar{
       height: auto;
       display: block;
       position: relative;
-      top: -20px;
+      top: 15%;
     }
     .shape{
       width: 92%;
@@ -113,7 +113,7 @@ li.nav-item:hover span.mbar{
       border-width: 2px;
       text-align: center;
       position: relative;
-      top: 120px;
+      top: 30%;
     }
     </style>
     </head>
