--- a/links/about.html
+++ b/links/about.html
@@ -105,16 +105,6 @@ li.nav-item:hover span.mbar{
       width: 92%;
       margin: auto;
     }
-    .bhead{
-      width: 40%;
-      margin: auto;
-      height: auto;
-      border-style: solid;
-      border-width: 2px;
-      text-align: center;
-      position: relative;
-      top: 260%;
-    }
     </style>
     </head>
     <body>
@@ -155,14 +145,12 @@ li.nav-item:hover span.mbar{
               <div class="shape">
               <div class="row">
                 <div class="col-md-12 border">
-                  <div class="bhead">
                   <span class="h2">/</span><span class="h1">/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
-                </div>
               </div>
               </div>
               <div class="row">
                 <div class="col-md-6 border">
-                  <img src="../images/false.png" alt="THE image should be here" class="falseon">
+                  <img src="../images/false.png" alt="THE image should be here" class="img-fluid" width="400px" height="400px">
                 </div>
               </div>
               <div class="row">
