--- a/links/about.html
+++ b/links/about.html
@@ -105,6 +105,13 @@ li.nav-item:hover span.mbar{
       width: 92%;
       margin: auto;
     }
+    .holder{
+      display: inline-block;
+      width: 100px;
+      height: auto;
+      border-style: solid;
+      border-width: 2px;
+    }
     </style>
     </head>
     <body>
@@ -151,6 +158,9 @@ li.nav-item:hover span.mbar{
               <div class="row">
                 <div class="col-md-6 border">
                   <img src="../images/false.png" alt="THE image should be here" class="img-fluid" width="400px" height="400px">
+                  <span class="holder">
+                    <span class="h2">/</span><span class="h1">/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
+                  </span>
                 </div>
               </div>
               <div class="row">
