--- a/links/about.html
+++ b/links/about.html
@@ -111,7 +111,7 @@ li.nav-item:hover span.mbar{
       height: auto;
       border-style: solid;
       border-width: 2px;
-      margin-left: 50px;
+      margin-right: 70px;
     }
     </style>
     </head>
